z-index fix

--- a/css/menu.css
+++ b/css/menu.css
@@ -26,7 +26,7 @@
   position: fixed;
   top: 0;
   left: -300px;
-  z-index: 400;
+  z-index: 450;
   width: 300px;
   max-width: 80%;
   height: 100%;
